# AGRI_3D-App_Mark2

./: README.md
.agents/rules/: repo-rules.md
agri3d_flutter/: README.md  pubspec.yaml
agri3d_flutter/linux/: CMakeLists.txt
agri3d_flutter/test/: widget_test.dart
communication/: protocol_schema.json  sync_contracts.py
masterplan/: README.md  task.md  task_archive.md
reference/: serial_bridge.py
reference/AI-agri3d/: CMakeLists.txt  build_log.txt  library.properties  platformio.ini  reset_read.py
reference/AI-agri3d/src/: README.txt  main.cpp
reference/AI-agri3d/src/XGBoost/: xgboost_model.c  xgboost_model.h
reference/AI-agri3d/src/core/: AI_Agri3D.h  ErrorCodes.h  SystemEnums.h  agri3d_ai.cpp  agri3d_ai.h  agri3d_commands.cpp  agri3d_commands.h  agri3d_config.h  agri3d_fuzzy.cpp  agri3d_fuzzy.h  agri3d_logger.cpp  agri3d_logger.h  agri3d_protocol.cpp  agri3d_protocol.h  agri3d_state.cpp  agri3d_state.h
reference/AI-agri3d/src/drivers/: agri3d_camera.cpp  agri3d_camera.h  agri3d_grbl.cpp  agri3d_grbl.h  agri3d_npk.cpp  agri3d_npk.h  agri3d_sd.cpp  agri3d_sd.h  agri3d_sensors.cpp  agri3d_sensors.h
reference/AI-agri3d/src/model-parameters/: model_metadata.h  model_variables.h
reference/AI-agri3d/src/network/: agri3d_network.cpp  agri3d_network.h
reference/AI-agri3d/src/routines/: agri3d_environment.cpp  agri3d_environment.h  agri3d_plant_map.cpp  agri3d_plant_map.h  agri3d_routine.cpp  agri3d_routine.h
reference/AI-agri3d/src/tflite-model/: tflite_learn_923987_3_compiled.cpp  tflite_learn_923987_3_compiled.h
tools/: analyzer.py  toggle_view.py
(+69 files in other folders)
